crates/language-v2/tests/src/fail/p2_specifiers/version_redundant_till/test.stderr
error: 'Till' with the first supported version '1.0.0' is equivalent to 'Never'.
  --> src/fail/p2_specifiers/version_redundant_till/test.rs:18:80
   |
18 | ...                   field_1 = Optional(reference = Two, enabled = Till("1.0.0")),
   |                                                                          ^^^^^^^
